(1) Fixed problem with fields vertical alignment

--- a/src/main/webapp/css/components/circle-icon.css
+++ b/src/main/webapp/css/components/circle-icon.css
@@ -6,6 +6,7 @@
 .vr-circle-icon {
 	background-color: #333;
 	color: white;
+	cursor: pointer;
 	display: inline-block;
 	line-height: 30px;
 	height: 30px;
