--- a/src/main/webapp/css/components/grid-system.css
+++ b/src/main/webapp/css/components/grid-system.css
@@ -10,7 +10,6 @@
 .row div[class^="col-"] {
 	padding-left: 5px;
 	padding-right: 0;
-	vertical-align: baseline;
 }
 
 .row div[class^="col-"]:first-child {
